# playground

./: .gitignore
asio/: CMakeLists.txt  main.cpp
audio/asio/: main.cpp
audio/coreaudio/: AudioDevice.cpp  AudioDevice.h  README.md  main.cpp
audio/qnxproject/: .gitignore  CMakeLists.txt  README.md  main.cpp
audio/qnxproject/src/: main.cpp
audio/qnxproject/targets/qemu-qnx800-x86_64/: mkqnximage-wrapper.sh
audio/qnxproject/targets/qemu-qnx800-x86_64/local/: options  ssh-ident
audio/qnxproject/targets/qemu-qnx800-x86_64/local/misc_files/: qtd_private_key.pem  qtd_public_key.pem  shadow  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
audio/qnxproject/targets/qemu-qnx800-x86_64/local/snippets/: system_files.custom
conan/: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  main.cpp
coreaudio/: CMakeLists.txt
cpp/appkit/: CMakeLists.txt  main.swift
cpp/design-patterns/: Factory-Method.cpp
cpp/webviewMacOS/: CMakeLists.txt  README.md
cpp/webviewMacOS/.github/: copilot-instructions.md
cpp/webviewMacOS/scripts/: embed_resources.sh
cpp/webviewMacOS/src/: main.cpp  resource_manager.cpp  resource_manager.h  webview_wrapper.cpp  webview_wrapper.h
cpp/webviewMacOS/src/platform/linux/: webview_linux.cpp  webview_linux.h
cpp/webviewMacOS/src/platform/macos/: webview_macos.h  webview_macos.mm
cpp/webviewMacOS/src/platform/windows/: webview_windows.cpp  webview_windows.h
cpp/win32/: CMakeLists.txt  asset_manager.cpp  index.html  main.cpp  test_embedded.cpp
the-audio-programming-book/chapter-1/: 1.7.1.c  1.7.2.c  1.7.3.md
the-audio-programming-book/chapter-1/exercise-1-1-1/: music.c
the-audio-programming-book/chapter-1/exercise-1-1-2/: answer.md
the-audio-programming-book/chapter-1/exercise-1-2-1/: main.c
the-audio-programming-book/chapter-1/exercise-1-2-2/: answer.md
the-audio-programming-book/chapter-1/exercise-1-2-3/: answer.md
the-audio-programming-book/chapter-1/exercise-1-2-4/: main.c
the-audio-programming-book/chapter-1/exercise-1-2-5/: a.c  b.md
the-audio-programming-book/chapter-1/exercise-1-2-6/: a.c
the-audio-programming-book/chapter-1/exercise-1-3-1/: main.c
the-audio-programming-book/chapter-1/exercise-1-3-2/: a.c  b.c
the-audio-programming-book/chapter-1/exercise-1-3-3/: a.c  b.c
the-audio-programming-book/chapter-1/exercise-1-3-4/: a.md  b.md
the-audio-programming-book/chapter-1/exercise-1-4-1/: 1-2-4.c  1-2-5.c  1-2-6.c  1-3-2.c  1-3-3.c
the-audio-programming-book/chapter-1/exercise-1-4-2/: 1-2-4.c  1-2-5.c  1-2-6.c  1-3-1.c
the-audio-programming-book/chapter-1/exercise-1-4-3/: 1-4-3.c
the-audio-programming-book/chapter-1/exercise-1-5-1/: 1-5-1.c
the-audio-programming-book/chapter-1/exercise-1-5-2/: a.c  b.c
the-audio-programming-book/chapter-1/exercise-1-5-3/: main.c
the-audio-programming-book/chapter-1/exercise-1-5-4/: main.c
the-audio-programming-book/chapter-1/exercise-1-5-5/: main.c
the-audio-programming-book/chapter-1/exercise-1-5-6/: README.md
the-audio-programming-book/chapter-1/exercise-1-5-7/: 1-5-7.md
the-audio-programming-book/chapter-1/exercise-1-5-8/: 1-5-8.md
the-audio-programming-book/chapter-1/exercise-1-6-1/: main.c
the-audio-programming-book/chapter-1/exercise-1-6-2/: main.md
the-audio-programming-book/chapter-1/exercise-1-6-3/: main.c
the-audio-programming-book/chapter-1/exercise-1-6-4/: hej.txt  main.c
the-audio-programming-book/chapter-1/exercise-1-6-5/: main.c
the-audio-programming-book/chapter-1/exercise-1-6-6/: 1-6-6.md
the-odin-project/: README.md
the-odin-project/calculator/: index.html  javascript.js  style.css
the-odin-project/etch-a-sketch/: index.html  javascript.js  style.css
the-odin-project/landing-page/: index.html  style.css
the-odin-project/restaurant-page/: package-lock.json  package.json  webpack.config.js
the-odin-project/restaurant-page/src/: about.js  home.js  index.js  menu.js  styles.css  template.html
the-odin-project/revisiting-rock-paper-scissors/: index.html  javascript.js
the-odin-project/rock-paper-scissors/: javascript.js
the-odin-project/tic-tac-toe/: app.js  index.html  style.css
the-odin-project/todo-list/: package-lock.json  package.json  webpack.config.js
the-odin-project/todo-list/src/: index.html  index.js  item.js  project.js  sidebar.js  style.css
